Fix: Hamburger menu css z-index 999

--- a/src/components/hamburger-menu/HamburgerMenu.css
+++ b/src/components/hamburger-menu/HamburgerMenu.css
@@ -1,5 +1,5 @@
 .hamburger-menu {
-  z-index: 10;
+  z-index: 999;
   width: 100vw;
   height: 100vh;
   background-color: #f9c946;
@@ -60,7 +60,7 @@
 .ham-streak-container {
   width: 303px;
   height: 153px;
-  background-color: #F5F4F6;
+  background-color: #f5f4f6;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
